--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body>
-
+  <div id="main">
+    <input id="open-tree" type="file" accept=".tsv" onchange="openFile(event)"/>
+  </div>
   <script src="https://d3js.org/d3.v4.min.js"></script></body>
+  <script src="eve.js"></script>
 </html>
