Generating table of simple tree.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
   <div id="main">
+    <div id="tree">
+      <table id="tree-table">
+      </table>
+    </div>
     <input id="open-input" class="hidden" type="file" accept=".tsv" onchange="openFile(event)"/>
   </div>
   <div id="filebar">
