UI drop-down of family members.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
   <div id="toolbar">
     <div class="left">
-      <select id="directory">
-        <option value="" disabled="disabled">Directory:</option>
+      <select id="roster">
+        <option value="" disabled="disabled">Roster</option>
       </select>
     </div>
     <div class="right">
