Root of tree can now be updated from drop-down menu.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <div id="toolbar">
     <div class="left">
-      <select id="roster">
+      <select id="roster" onchange="updateRoot()">
         <option value="" disabled="disabled">Roster</option>
       </select>
     </div>
