Rendering names using canvas.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <div id="tree">
       <table id="tree-table">
       </table>
+      <canvas id="canvas">
+      </canvas>
     </div>
     <input id="open-input" class="hidden" type="file" accept=".tsv" onchange="openFile(event)"/>
   </div>
